// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrFinalCommentEmployee Component displays the PrFinalCommentEmployee 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          component="p"
        >
          Abschließender Kommentar durch Mitarbeiter (optional)
        </WithStyles(Typography)>
        <WithStyles(PrTextField)
          helperText="Letzte Anmerkungen und Ergänzungen zum Performance Review."
          onChange={[Function]}
          writeableText=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`PrFinalCommentEmployee Component displays the text writeable for the employee 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          component="p"
        >
          Abschließender Kommentar durch Mitarbeiter (optional)
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          className="PrFinalCommentEmployee-comment-2"
          id="finalCommentReadonly"
          variant="body1"
        >
          Bitte nach dem Gespräch ausfüllen.
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;
